# vogDocker

./: .dockerignore  .gitignore  Dockerfile  debug.py  docker-compose.yaml  docker.md  get_201.sh  pyproject.toml  requirements.txt
database/: generate_db.py
scripts/: get_data.sh  hypercorn  load-taxa  load-vog
tests/: test_vogdb_main.py
vDirect/: API_requests.py  tests.py  vdirect.py
vogdb/: database.py  functionality.py  main.py  models.py  run_server.py  schemas.py
vogdb/graphql/: __init__.py  sample.py
vogdb/loader/: __init__.py  support.py
vogdb/middleware/: __init__.py  dbsession.py
vogdb/taxa/: __main__.py  support.py
