[tool.poetry]
name = "vogdb"
version = "0.1.0"
description = "A REST API to vogdb.org"
authors = ["Sigi Koizar <a11741823@unet.univie.ac.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ete3 = "^3.1.2"
biopython = "^1.78"
fastapi = "^0.63.0"
ariadne = "^0.12.0"
pandas = "^1.2.2"
SQLAlchemy = "^1.3.23"
lxml = "^4.6.2"
cryptography = "^3.4.4"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.3"
jupyterlab = "^3.0.7"
flake8 = "^3.8.4"
pytest = "^6.2.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
